# plasma-welcome

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  REUSE.toml  org.kde.plasma-welcome.appdata.xml  org.kde.plasma-welcome.desktop  org.kde.welcomecenter.appdata.xml  org.kde.welcomecenter.desktop
.reuse/: dep5
pages/: CMakeLists.txt
pages/discover/: metadata.json
pages/enjoy/: metadata.json
pages/feedback/: metadata.json
pages/live/: metadata.json
pages/network/: metadata.json
pages/plasmaupdate/: metadata.json
pages/powerfulwhenneeded/: metadata.json
pages/simplebydefault/: metadata.json
pages/welcome/: metadata.json
po/ar/: plasma-welcome.po
po/ast/: plasma-welcome.po
po/az/: plasma-welcome.po
po/be/: plasma-welcome.po
po/bg/: plasma-welcome.po
po/ca/: plasma-welcome.po
po/ca@valencia/: plasma-welcome.po
po/cs/: plasma-welcome.po
po/da/: plasma-welcome.po
po/de/: plasma-welcome.po
po/en_GB/: plasma-welcome.po
po/eo/: plasma-welcome.po
po/es/: plasma-welcome.po
po/eu/: plasma-welcome.po
po/fa/: plasma-welcome.po
po/fi/: plasma-welcome.po
po/fr/: plasma-welcome.po
po/ga/: plasma-welcome.po
po/gl/: plasma-welcome.po
po/he/: plasma-welcome.po
po/hi/: plasma-welcome.po
po/hu/: plasma-welcome.po
po/ia/: plasma-welcome.po
po/id/: plasma-welcome.po
po/is/: plasma-welcome.po
po/it/: plasma-welcome.po
po/ja/: plasma-welcome.po
po/ka/: plasma-welcome.po
po/ko/: plasma-welcome.po
po/lt/: plasma-welcome.po
po/lv/: plasma-welcome.po
po/nb/: plasma-welcome.po
po/nl/: plasma-welcome.po
po/nn/: plasma-welcome.po
po/pa/: plasma-welcome.po
po/pl/: plasma-welcome.po
po/pt/: plasma-welcome.po
po/pt_BR/: plasma-welcome.po
po/ro/: plasma-welcome.po
po/ru/: plasma-welcome.po
po/sa/: plasma-welcome.po
po/sk/: plasma-welcome.po
po/sl/: plasma-welcome.po
po/sv/: plasma-welcome.po
po/ta/: plasma-welcome.po
po/tr/: plasma-welcome.po
po/ug/: plasma-welcome.po
po/uk/: plasma-welcome.po
po/zh_CN/: plasma-welcome.po
src/: .directory  CMakeLists.txt  about.cpp  about.h  app.cpp  app.h  applicationInfo.cpp  applicationInfo.h  config.kcfg  config.kcfgc  configModule.cpp  configModule.h  controller.cpp  controller.h  distro.cpp  distro.h  kuserfeedbacksettings.h.cmake  main.cpp  module.cpp  module.h  pagesmodel.cpp  pagesmodel.h  plasmacolors.cpp  plasmacolors.h  release.cpp  release.h  resources.qrc  tourconfig.kcfg  tourconfig.kcfgc  utils.cpp  utils.h  version.h.cmake  welcomeconfig.kcfg  welcomeconfig.kcfgc
src/contents/assets/: endlesssky.png.license  konqi-donations.png.license  konqi-kde-hi.png.license  krita.png.license
src/contents/ui/: AboutPage.qml  GenericPage.qml  GlobalMenu.qml  Main.qml  main.qml
src/contents/ui/footers/: FooterUpdate.qml
src/contents/ui/pages/: Accessibility.qml  Apps.qml  Contribute.qml  Discover.qml  Donate.qml  Done.qml  KCM.qml  Kickoff.qml  Live.qml  Network.qml  Plasma.qml  PlasmaUpdate.qml  PowerfulWhenNeeded.qml  SimpleByDefault.qml  SystemSettings.qml  SystemTray.qml  Welcome.qml
src/contents/ui/pages/donate/: Supporters.qml
src/contents/ui/pages/kcms/: Feedback.qml  KAccounts.qml
src/contents/ui/pages/network/: NetworkPlasmaNM.qml  PlasmaNM.qml
src/contents/ui/pages/plasmaupdate/: Beta.qml  Update.qml
src/contents/ui/pages/powerfulwhenneeded/: PlasmaFeatureButton.qml
src/kded/: CMakeLists.txt  daemon.cpp  daemon.h  kded_plasma-welcome.json
src/packagestructure/: CMakeLists.txt  plasma-welcome-packagestructure.json  plasmawelcomepackage.cpp  plasmawelcomepackage.h
src/private/: CMakeLists.txt  app.h  qmlconfig.h  release.h  singleton.h
src/private/qml/: ContributionCard.qml  Main.qml  PageError.qml
src/private/qml/footers/: Footer.qml  FooterUpdate.qml
src/private/qml/mock/: InteractionInhibitor.qml  MockCard.qml  MockOverview.qml  MockPanel.qml  MockPlasmoid.qml
src/private/qml/mock/panel/: MockDigitalClockApplet.qml  MockKickoffApplet.qml  MockSystemTrayApplet.qml
src/private/qml/pages/: Discover.qml  Enjoy.qml  Feedback.qml  Live.qml  Network.qml  PlasmaUpdate.qml  SimpleByDefault.qml  Welcome.qml
src/private/qml/pages/enjoy/: Supporters.qml
src/private/qml/pages/plasmaupdate/: Beta.qml  Update.qml
src/private/qml/pages/powerfulwhenneeded/: Activities.qml  KRunner.qml  Overview.qml  Vaults.qml
src/public/: CMakeLists.txt  applicationInfo.cpp  applicationInfo.h  controller.cpp  controller.h  distro.cpp  distro.h  utils.cpp  utils.h
src/public/qml/: ApplicationIcon.qml  Page.qml
src/qml/: ApplicationIcon.qml  ContributionCard.qml  GenericIcon.qml  GenericPage.qml  KCM.qml  KCMPage.qml  Main.qml  PageError.qml  PlasmaFeatureButton.qml  PlasmaNMLoader.qml  ScrollablePage.qml  WebPage.qml  WebProfile.qml
src/qml/common/: ApplicationIcon.qml  ContributionCard.qml  GenericPage.qml  KCMPage.qml  ScrollablePage.qml
src/qml/footers/: Footer.qml  FooterDefault.qml  FooterUpdate.qml
src/qml/mock/: MockActivities.qml  MockCard.qml  MockDesktop.qml  MockKRunner.qml  MockKey.qml  MockKeyboard.qml  MockNotification.qml  MockOverview.qml  MockPanel.qml  MockPlasmoid.qml
src/qml/mock/panel/: MockAppletBase.qml  MockDigitalClockApplet.qml  MockKickoffApplet.qml  MockShowDesktopApplet.qml  MockSystemTrayApplet.qml  MockSystemTrayIcon.qml  MockTaskManager.qml
src/qml/pages/: Contribute.qml  Discover.qml  Donate.qml  Enjoy.qml  Feedback.qml  Live.qml  Network.qml  PlasmaUpdate.qml  PowerfulWhenNeeded.qml  SimpleByDefault.qml  Welcome.qml
src/qml/pages/donate/: Supporters.qml  UpdateSupporters.py
src/qml/pages/enjoy/: Supporters.qml  UpdateSupporters.py
src/qml/pages/network/: MockPanel.qml  PlasmaNMLoader.qml
src/qml/pages/oobe/: OOBE.qml  Time.qml  User.qml
src/qml/pages/plasmaupdate/: Beta.qml  Update.qml
src/qml/pages/powerfulwhenneeded/: Activities.qml  GetNewStuff.qml  KDEConnect.qml  KRunner.qml  MetaKey.qml  Overview.qml  PlasmaFeatureButton.qml  PlasmaFeatureCard.qml  SystemSettings.qml  Vaults.qml
src/qml/pages/powerfulwhenneeded/krunner/: MockKRunner.qml
(+11 files in other folders)
